2009-05-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/uPSD32xx.h: added, thanks G.H.J. Morsink

2009-05-07 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* support/librarian/sdcclib.c: fixed bugs in GetNameFromPath() and
	  ChangeExtension().  Thanks to Jon Nall for pointed the bug out and
	  patch #2788108.

2009-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented pointer casting for vararg function params

2009-05-04 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* as/link/hc08/link_hc08.dsp, as/link/mcs51/aslink.dsp,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp: replaced getline.c
	  with lk_readnl.c.

2009-05-04 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp.c, support/cpp/version.c: fixed crash due to
	  missing initialization of line_table,
	  corrected sdcpp version to 4.4.0

2009-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/div.s:
	  Applied patch #2764475 from Marco Bodrato to speed up Z80 division.

2009-05-03 Borut Razem <borut.razem AT siol.net>

	* as/link/hc08/Makefile.in, as/link/mcs51/Makefile.in,
	  as/link/z80/Makefile.in, as/link/lk_readnl.c, as/link/lk_readnl.h,
	  as/link/lklib.c, as/link/lkrel.c, as/link/lksdcclib.c:
	  getline renamed to lk_readln to prevent conflicts with Fedora 11
	  glibc-2.9.90-19 getline;
	  see https://bugzilla.redhat.com/show_bug.cgi?id=488217

2009-05-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bug 2783061 by applying patch from
	  Keith Packard, thanks
	* support/regression/tests/bug2783061.c: new, added

2009-04-28 Borut Razem <borut.razem AT siol.net>

	* support/cpp/output.h, support/cpp/opts-common.c,
	  support/cpp/c-ppoutput.c, support/cpp/cppdefault.c,
	  support/cpp/system.h, support/cpp/cppdefault.h,
	  support/cpp/prefix.c, support/cpp/except.h, support/cpp/hwint.h,
	  support/cpp/prefix.h, support/cpp/libiberty/safe-ctype.h,